force-app/main/default/objects/Lab_Panel_Test__c/Lab_Panel_Test__c.object-meta.xml
<CustomObject>
    <label>Lab Panel Test</label>
    <nameField>
        <displayFormat>TID - {00000000}</displayFormat>
        <label>Lab Panel Test ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lab Panel Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>