force-app/main/default/objects/Lab_Panel_Test__c/fields/Check_for_Results__c.field-meta.xml
<CustomField>
    <fullName>Check_for_Results__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Check for Results</label>
    <type>Checkbox</type>
</CustomField>