force-app/main/default/objects/Lab_Panel_Test__c/fields/Check_Results__c.field-meta.xml
<CustomField>
    <fullName>Check_Results__c</fullName>
    <formula>Panel_Test__r.Check_For_Results__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Results</label>
    <type>Checkbox</type>
</CustomField>