force-app/main/default/objects/Lab_Panel_Test__c/fields/Lab_Order__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lab Order</label>
    <referenceTo>Lab_Order__c</referenceTo>
    <relationshipLabel>Lab Panel Tests</relationshipLabel>
    <relationshipName>Lab_Panel_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>