force-app/main/default/objects/Lab_Panel_Test__c/fields/Lab_Order_Panel__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order_Panel__c</fullName>
    <label>Lab Order Panel</label>
    <referenceTo>Lab_Order_Panel__c</referenceTo>
    <relationshipName>Lab_Panel_Analytes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>