force-app/main/default/objects/Lab_Panel_Test__c/fields/Panel_Test__c.field-meta.xml
<CustomField>
    <fullName>Panel_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel Test ID</label>
    <referenceTo>Panel_Test__c</referenceTo>
    <relationshipLabel>Lab Panel Tests</relationshipLabel>
    <relationshipName>Lab_Panel_Analytes</relationshipName>
    <type>Lookup</type>
</CustomField>