force-app/main/default/objects/Lab_Panel_Test__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Test Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>TNP</fullName>
            </value>
            <value>
                <fullName>Results Ready</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>PA Rejected</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Partial Results Ready</fullName>
            </value>
            <value>
                <fullName>PWN Rejected</fullName>
                <isActive>false</isActive>
                <label>PWN Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>