force-app/main/default/objects/Lab_Panel_Test__c/fields/Test_Code__c.field-meta.xml
<CustomField>
    <fullName>Test_Code__c</fullName>
    <formula>Panel_Test__r.Test__r.Test_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Code</label>
    <type>Text</type>
</CustomField>