force-app/main/default/objects/Lab_Panel_Test__c/fields/Test_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Description__c</fullName>
    <formula>Panel_Test__r.Test__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Description</label>
    <type>Text</type>
</CustomField>