force-app/main/default/objects/Lab_Panel_Test__c/fields/Test_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Name__c</fullName>
    <formula>Panel_Test__r.Test__r.Test_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Name</label>
    <type>Text</type>
</CustomField>